--- a/index.html
+++ b/index.html
@@ -1,244 +1,80 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Tarun Premier Corporation Pvt Ltd</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
-		<link rel="icon" href="images/logo.png">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon"> 
+	 <link rel="stylesheet" href="css/main.css"> 
+	<title>
+		TPCPL
+	</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+</head>
 
-		<!-- Sidebar -->
-			<section id="sidebar" style="background:#8854d0;background-size: cover;">
-				<div class="inner">
-					<left><img src="images/logo.png" width="100px"></left>
-					<nav>
-						<ul >
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#four">Our Customers</a></li>
-							<li><a href="#three">Get in touch</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
+<body>
+	<div class="header">
+		<a href="index.html"><img src="img/logo.png" class="logo"></a>
+		<div class="company-name">
+			<div class="company-name-big">TARUN</div>PREMIER CORPORATION PVT LTD<div style="height: 0px;overflow: hidden;">.</div>
+		</div>
+		<div class="header-right">
+			<a id="home" class="active" href="#">Home</a>
+			<a id="aboutus" href="#aboutus">About Us</a>
+			<!-- <a id="products" href="products.html">Products</a>
+			 --><a id="contactus" href="#contact">Contact Us</a>
+			&nbsp;
+		</div> 
+	</div>
+	<div id="landing-page">
+		<video class="intro-video" width="60%" autoplay muted loop>
+			<source src="img/introvideo.mp4" type="video/mp4">
+		</video>
+	</div>	
+	<br><br><br>
+	<div id="aboutusdiv">
+		<br><br>
+		
+			<h1>About Us</h1>
+			<center>
+			<p>
+				Welcome to the world of refrigeration spares and accessories.<br> 
+				We at <b>Tarun Premier Corporation Pvt. Ltd.</b> provide you one stop solution for your refigeration need. Be it industrial, commercial or domestic, our dedicated sales team will help you.
+				<br><br>
+				We are the fruits of the big tree grown by <b>Shri Dalam Chand Doshi</b> ( Lifetime Achievement awardee by AIACRA and founder <b>Tarun Company</b> ) over 60 years ago. By his guidance, values and eternal supervision, we are serving our customers with complete satisfaction.<br>
+				<br>
+				We deal in over 50+ Brands and are wholesalers for brands like Dry All, Metal Sales Corporation, Whirlpool, Godrej, AIPL, OG Heavy Duty, Value, SAFE Ref, etc. In addition to this, with the strong support of vendors and high-quality products range, we are able to gain a relationship with our patrons in a short span of time.   
+			</p><img src="img/aboutusside.jpg"></center>
+			
+	</div>
+	<hr>
+	<div id="contactusdiv">
+		<br><br>
+		
+			<h1>Contact Us</h1>
+			<center>
+			<p>
+				<b>ADDRESS</b><br>
+				3792-3793, Netaji Subhash Marg<br>
+				Daryaganj, Delhi - 110002<br><br>
+				<b>PHONE</b><br>
+				+91 964 353 6329<br><br>
+				<b>EMAIL</b><br>
+				<a href="mailto:info@tarunpremiercorporation.com" target="_blank">info@tarunpremiercorporation.com</a>
+				<a href="mailto:tarunpremiercorporation@gmail.com" target="_blank">tarunpremiercorporation@gmail.com</a><br><br>
+				<b>WhatsApp</b><br>
+				<a href="https://wa.link/42u0s8" target="_blank">+91 964 353 6329</a> <br><br>
+				<b>FACEBOOK</b><br>
+				<a href="https://www.facebook.com/tarunpremiercorporation" target="_blank">fb.com/tarunpremiercorporation</a>
+			</p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4951.727116978766!2d77.23857422990481!3d28.647744782292495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd201b5b957f%3A0x2e88145c22f24f7b!2sTarun%20Premier%20Corporation%20Private%20Limited!5e0!3m2!1sen!2sin!4v1618941653923!5m2!1sen!2sin" width="700" height="300" style="border:0;" loading="lazy"></iframe></center>
+			
+	</div>
+	<footer class="footer">
+		&copy; Tarun Premier Corporation Pvt. Ltd.
+		<div class="social-icons" style="margin-right:2em"><img src="img/fb.png" alt="fb-logo"></div>
+		<div class="social-icons"><img src="img/ig.png" alt="ig-logo" ></div>
+		<div class="social-icons"><img src="img/wa.png" alt="wa-logo" ></div>
+	</footer>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up" style="background-image:url('images/hvac.gif');background-size: cover;position: relative;">
-						<div style="background-color: rgba(100, 100, 100, 0.5);position: absolute;height: 100%;width: 100%"></div>
-						<div class="inner" >
-							<img src="images/logo.png" width="100px">
-							<h1>TARUN PREMIER CORPORATION PRIVATE LIMITED</h1>
-							<p>One Stop Shop For <b>Refrigeration & Air-conditioning</b> Needs.</p>
-							<ul class="actions">
-								<li><a href="#one" class="hvr-grow-shadow button scrolly "><b>Learn more</b></a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights" style="background: #70C1B3">
-						<section>
-							<a href="#" class="image"><img src="images/mvv.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Our Vision - Our Values - Our Mission</h2>
-									<p>Honest - Genuine - Ethical Business</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image" style="background-size: contain;background-repeat: no-repeat;background-color: white"><img src="images/genuine.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Refrigeration Spares & Accessories</h2>
-									<p>Authorized dealers for spares & accessories of leading brands like <b>Whirlpool, Godrej, Dry All, Tecumseh, LG, Emerson, Carrier Totaline,BP Refcool, ABRO, Dosea, G9 Spares, Beijer Ref, Tru+, Value Refrigerants and many more...</b></p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Meet The Team</h2>
-									<p>The Terrific Trio...</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up" style="background: #eb3b5a">
-						<div class="inner">
-							<h2>What we do</h2>
-							<p>We deal in a broad spectrum of refrigeration business. Given below are some major areas of interest.</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-home"></span>
-									<h3>Domestic Refrigeration</h3>
-									<img src="images/domestic.png" alt="" data-position="center center" height="160px" />
-									<p>Acrylic/plastic spares, evaporators, condensors, compressors, thermostats, timers, bi-metals and more.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-ice-cream"></span>
-									<h3>Commercial Refrigeration</h3>
-									<img src="images/commercial.jpg" alt="" data-position="center center" height="160px" wid/>
-									<p>Reciprocating compressors, condensors, evaporators, motors, controllers, fans and more.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-industry"></span>
-									<h3>Industrial Refrigeration</h3>
-									<img src="images/industrial.jpg" alt="" data-position="center center" height="160px" wid/>
-									<p>Scroll compressors, fan-coil units, receivers, accumulators, oil separators, valves, condensors, fans, controllers and more.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-spray-can"></span>
-									<h3>Consumables</h3>
-									<img src="images/consumable.jpg" alt="" data-position="center center" height="160px" wid/>
-									<p>Refrigerants, butane cartridges, PU foam spray, coil cleaners, brazing flux & alloy, tapes, leak locators, coatings and more.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-tools"></span>
-									<h3>Tools & Accessories</h3>
-									<img src="images/toolsnass.jpg" alt="" data-position="center center" height="160px" wid/>
-									<p>Vacuum pumps, tube cutters, flaring tools, gauge manifolds, charging hoses, ratchets, pinch-off tools, tool kits, power tools, hardware tools and more.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-info"></span>
-									<h3>Technical Support & Service</h3>
-									<img src="images/support.jpg" alt="" data-position="center center" height="160px" wid/>
-									<p>Dedicated team for catering product queries and after sales support.</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Our Products</a></li>
-							</ul>
-						</div>
-					</section>
-					<section id="four" class="wrapper fade-up" style="background-color: #a5b1c2;">
-						<div class="inner">
-							<h2>Our Customers</h2>
-							<p>Happy customers is our success mantra.</p><center>
-
-							</center>
-							<img src="images/arb.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px" />
-							<img src="images/bercos.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/bikaner.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/bk.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/worldsquare.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/bluestar.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/ccd.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/dmrc.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/embassy.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/excelsior.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/haldiram.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/havells.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/hindustan.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/iitd.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px" />
-							<img src="images/nitj.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/pvr.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/sagar.png" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/sidwal.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							<img src="images/woodland.jpg" alt="" data-position="center center" height="60px" class="hvr-grow-shadow" style="margin:10px"/>
-							
-						</div>
-					</section>
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up" style="background: #fd9644">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Feel free to contact us. Our working hours <b>10:00 AM to 07:00 PM</b> from <b>Monday to Saturday</b>.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>3792-93, N.S. Marg<br />
-											Daryaganj, Delhi - 110002<br />
-											India</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											info@tarunpremiercorporation.com
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>+91 964-353-6329</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="https://www.facebook.com/tarunpremiercorporation/" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
-												<li><a href="https://www.instagram.com/tarunpremiercorporation/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; 2019. All rights reserved.</li><li>Design: <strong> Vineet Kumar Doshi</strong></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+	
+</body>
 </html>
