--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</div> 
 	</div>
 	<div id="landing-page">
-		<video class="intro-video" width="60%" autoplay="true" muted loop>
+		<video class="intro-video" width="60%" autoplay="true" muted="true" loop>
 			<source src="img/introvideo.mp4" type="video/mp4">
 		</video>
 	</div>	
