--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		</div> 
 	</div>
 	<div id="landing-page">
-		<video class="intro-video" width="60%" autoplay="true" muted="true" loop>
-			<source src="img/introvideo.mp4" type="video/mp4">
-		</video>
+		<div class="intro-video">
+			<img src="img/introvideo.gif" type="video/mp4">
+		</div>
 	</div>	
 	<br><br><br>
 	<div id="aboutusdiv">
@@ -46,7 +46,7 @@
 			</p><img src="img/aboutusside.jpg"></center>
 			
 	</div>
-	<hr>
+
 	<div id="contactusdiv">
 		<br><br>
 		
@@ -70,9 +70,9 @@
 	</div>
 	<footer class="footer">
 		&copy; Tarun Premier Corporation Pvt. Ltd.
-		<div class="social-icons" style="margin-right:2em"><img src="img/fb.png" alt="fb-logo"></div>
-		<div class="social-icons"><img src="img/ig.png" alt="ig-logo" ></div>
-		<div class="social-icons"><img src="img/wa.png" alt="wa-logo" ></div>
+		<div class="social-icons" style="margin-right:2em"><a href="https://www.facebook.com/tarunpremiercorporation" target="_blank"><img src="img/fb.png" alt="fb-logo"></a></div>
+		<div class="social-icons"><a href="https://www.instagram.com/tarunpremiercorporation/" target="_blank"><img src="img/ig.png" alt="ig-logo" ></a></div>
+		<div class="social-icons"><a href="https://wa.link/42u0s8" target="_blank"><img src="img/wa.png" alt="wa-logo" ></a></div>
 	</footer>
 
 	
