--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon"> 
-	 <link rel="stylesheet" href="css/main.css"> 
+	<link rel="stylesheet" media="screen and (min-width: 600px)" href="css/main.css"> 
+	<link rel="stylesheet" media="screen and (max-width: 600px)" href="css/smallmain.css"> 
 	<title>
 		TPCPL
 	</title>
@@ -27,7 +28,7 @@
 	</div>
 	<div id="landing-page">
 		<div class="intro-video">
-			<img src="img/introvideo.gif" type="video/mp4">
+			<img src="img/introvideo.gif">
 		</div>
 	</div>	
 	<br><br><br>
@@ -65,7 +66,7 @@
 				<a href="https://wa.link/42u0s8" target="_blank">+91 964 353 6329</a> <br><br>
 				<b>FACEBOOK</b><br>
 				<a href="https://www.facebook.com/tarunpremiercorporation" target="_blank">fb.com/tarunpremiercorporation</a>
-			</p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4951.727116978766!2d77.23857422990481!3d28.647744782292495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd201b5b957f%3A0x2e88145c22f24f7b!2sTarun%20Premier%20Corporation%20Private%20Limited!5e0!3m2!1sen!2sin!4v1618941653923!5m2!1sen!2sin" width="700" height="300" style="border:0;" loading="lazy"></iframe></center>
+			</p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4951.727116978766!2d77.23857422990481!3d28.647744782292495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd201b5b957f%3A0x2e88145c22f24f7b!2sTarun%20Premier%20Corporation%20Private%20Limited!5e0!3m2!1sen!2sin!4v1618941653923!5m2!1sen!2sin"style="border:0;" loading="lazy"></iframe></center>
 			
 	</div>
 	<footer class="footer">
