--- a/products.html
+++ b/products.html
@@ -3,9 +3,10 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon"> 
-	<link rel="stylesheet"  href="css/main.css"> 
-	<!-- <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/smallmain.css"> 
-	 --><link rel="stylesheet" href="css/product.css"> 
+	<link rel="stylesheet" media="screen and (min-width: 600px)" href="css/main.css">
+	<link rel="stylesheet" media="screen and (max-width: 600px)" href="css/smallmain.css"> 
+	<link rel="stylesheet" media="screen and (min-width: 600px)" href="css/product.css">
+	<link rel="stylesheet" media="screen and (max-width: 600px)" href="css/smallproduct.css">
 	<title>
 		TPCPL
 	</title>
@@ -26,63 +27,30 @@
 			 -->&nbsp;
 		</div> 
 	</div>
-<!-- 	<div id="landing-page">
-		<div class="intro-video">
-			<img src="img/introvideo.gif">
-		</div></div><br><br><br>
-	<div id="aboutusdiv">
-		<br><br>
-		
-			<h1>About Us</h1>
-			<center>
-			<p>
-				Welcome to the world of refrigeration spares and accessories.<br> 
-				We at <b>Tarun Premier Corporation Pvt. Ltd.</b> provide you one stop solution for your refigeration need. Be it industrial, commercial or domestic, our dedicated sales team will help you.
-				<br><br>
-				We are the fruits of the big tree grown by <b>Shri Dalam Chand Doshi</b> ( Lifetime Achievement awardee by AIACRA and founder <b>Tarun Company</b> ) over 60 years ago. By his guidance, values and eternal supervision, we are serving our customers with complete satisfaction.<br>
-				<br>
-				We deal in over 50+ Brands and are wholesalers for brands like Dry All, Metal Sales Corporation, Whirlpool, Godrej, AIPL, OG Heavy Duty, Value, SAFE Ref, etc. In addition to this, with the strong support of vendors and high-quality products range, we are able to gain a relationship with our patrons in a short span of time.   
-			</p><img src="img/aboutusside.jpg"></center></div>
-	<div id="contactusdiv">
-		<br><br>
-		
-			<h1>Contact Us</h1>
-			<center>
-			<p>
-				<b>ADDRESS</b><br>
-				3792-3793, Netaji Subhash Marg<br>
-				Daryaganj, Delhi - 110002<br><br>
-				<b>PHONE</b><br>
-				+91 964 353 6329<br><br>
-				<b>EMAIL</b><br>
-				<a href="mailto:info@tarunpremiercorporation.com" target="_blank">info@tarunpremiercorporation.com</a>
-				<a href="mailto:tarunpremiercorporation@gmail.com" target="_blank">tarunpremiercorporation@gmail.com</a><br><br>
-				<b>WhatsApp</b><br>
-				<a href="https://wa.link/42u0s8" target="_blank">+91 964 353 6329</a> <br><br>
-				<b>FACEBOOK</b><br>
-				<a href="https://www.facebook.com/tarunpremiercorporation" target="_blank">fb.com/tarunpremiercorporation</a>
-			</p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4951.727116978766!2d77.23857422990481!3d28.647744782292495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd201b5b957f%3A0x2e88145c22f24f7b!2sTarun%20Premier%20Corporation%20Private%20Limited!5e0!3m2!1sen!2sin!4v1618941653923!5m2!1sen!2sin"style="border:0;" loading="lazy"></iframe></center></div> -->
+
 	<div class="sidebar">
-		<br>
-		<center>
+		
+			<center>
+				<div class="sidebarHeadings">
+					Brands
+				</div>
+			
+			<div id="brandList"></div>
+		<br />
+		
 			<div class="sidebarHeadings">
 				Spares Catogery
 			</div>
 		
-		<ul class="catogeryList">
-			<a href="#" onclick="showProduct(this)"><li>Airconditioning</li></a>
-			<a href="#" onclick="showProduct(this)"><li>Domestic <br>Refrigeration</li></a>
-			<a href="#" onclick="showProduct(this)"><li>Commercial <br>Refrigeration</li></a>
-			<a href="#" onclick="showProduct(this)"><li>HVAC & Industrial Refrigeration</li></a>
-			<a href="#" onclick="showProduct(this)"><li>Accessories</li></a>
-		</ul></center>
-	<!-- 	<hr> --><br>
-		<center>
-			<div class="sidebarHeadings">
-				Brands
-			</div>
-		</center>
-		<ul id="brandList"></ul>
+		<div class="catogeryList">
+			<a href="#" onclick="showProduct(this)"><div>Airconditioning</div></a>
+			<a href="#" onclick="showProduct(this)"><div>Domestic <br>Refrigeration</div></a>
+			<a href="#" onclick="showProduct(this)"><div>Commercial <br>Refrigeration</div></a>
+			<a href="#" onclick="showProduct(this)"><div>HVAC & Industrial Refrigeration</div></a>
+			<a href="#" onclick="showProduct(this)"><div>Accessories</div></a>
+		</div></center>
+	<!-- 	<hr><br>
+	 -->	
 
 	</div>
 	<center>
