--- a/products.html
+++ b/products.html
@@ -20,9 +20,9 @@
 			<div class="company-name-big">TARUN</div>PREMIER CORPORATION PVT LTD<div style="height: 0px;overflow: hidden;">.</div>
 		</div>
 		<div class="header-right">
-			<a id="home" class="active" href="index.html">Home</a>
+			<a id="home" href="index.html">Home</a>
 			<!-- <a id="aboutus" href="#aboutus">About Us</a>
-			 --><a id="products" href="products.html">Products</a>
+			 --><a id="products" class="active" href="products.html">Products</a>
 			<!-- <a id="contactus" href="#contact">Contact Us</a>
 			 -->&nbsp;
 		</div> 
